--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-body{
+body {
   font-family: sans-serif;
   margin: 20px;
 }
 
-img, video {
-  max-width: 100%;
+img,
+video {
   display: block;
+  max-width: 100%;
 }
 
-h1{
+h1 {
   text-align: center;
   font-size: 1.5rem;
 }
+
 
 #slide-elements{
   display: grid;
@@ -34,13 +36,53 @@ h1{
 }
 
 #slide-controls{
+  position: relative;
   display: grid;
   grid-area: 1/1;
   grid-template-columns: 1fr 1fr;
 }
 
-#slide-controls button{
- -webkit-tap-highlight-color: rgba(0, 0, 0,0);
+#slide-controls button {
   opacity: 0;
   appearance: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+#slide-thumb{
+  display: flex;
+  position: absolute;
+  width: 100%;
+  pointer-events: none;
+}
+
+#slide-thumb > span{
+  flex: 1;
+  display: block;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.2);
+
+  margin: 5px;
+  border-radius: 4px;
+  overflow: hidden;
+  isolation: isolate;
+
+}
+
+#slide-thumb .thumb-item.active {
+  display: block;
+  height: inherit;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 4px;
+  transform: translateX(-100%);
+  animation: thumb forwards linear running;
+}
+
+#slide-thumb .thumb-item.paused {
+  animation-play-state: paused;
+}
+
+@keyframes thumb {
+  to {
+    transform: initial;
+  }
 }
